[gd_scene load_steps=3 format=3 uid="uid://dl8eec1dewykc"]

[ext_resource type="Script" uid="uid://d0g8xmhfrwsln" path="res://scripts/upgrade_buttons.gd" id="1_76get"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_splgj"]
size = Vector2(100, 101)

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource("1_76get")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 400.0
offset_top = 312.0
offset_right = 500.0
offset_bottom = 412.0
color = Color(0.064, 0.911, 0.054, 0.16)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -85.0
offset_right = 2556.0
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 250
text = "Upgrade Recylcer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -61.0
offset_right = 2556.0
offset_bottom = 385.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 250
text = "Cost: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="ColorRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Area2D"]
position = Vector2(50, 49.5)
shape = SubResource("RectangleShape2D_splgj")
debug_color = Color(4.13924e-06, 0.64637, 0.238671, 0.42)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 800.0
offset_top = 312.0
offset_right = 900.0
offset_bottom = 412.0
color = Color(0.064, 0.911, 0.054, 0.16)

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -85.0
offset_right = 2556.0
offset_bottom = 361.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 250
text = "Upgrade Upgrader"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -61.0
offset_right = 2556.0
offset_bottom = 385.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 250
text = "Cost: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D2" type="Area2D" parent="ColorRect2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect2/Area2D2"]
position = Vector2(50, 49.5)
shape = SubResource("RectangleShape2D_splgj")
debug_color = Color(4.13924e-06, 0.64637, 0.238671, 0.42)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="ColorRect/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="ColorRect2/Area2D2" to="." method="_on_area_2d_2_body_entered"]
